working-with-java/05-ingress/boot-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring-boot-service-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-boot-service
    spec:
      containers:
      - name: spring-boot-service
        image: somkiat/spring-boot-example
        ports:
        - containerPort: 8080
